@@ -25,7 +25,7 @@
 #include <sys/ioctl.h>
 
 #ifndef HID_MAX_USAGES
-#define HID_MAX_USAGES 1024	/* horrible workaround hack */
+#define HID_MAX_USAGES 1024 /* horrible workaround hack */
 #endif
 
 #include <linux/hiddev.h>
@@ -33,12 +33,15 @@
 #include <stdio.h>
 #include <signal.h>
 #include <sys/select.h>
+#include <ctype.h>
 
 #include "main.h"
 
-#define DRV_VERSION	"0.01"
+#define DRV_VERSION "0.02"
 
 #define NUM_EVTS 64
+
+#define RETRIES 3
 
 /* Response to I identification queries is in the following format:
  *
@@ -46,34 +49,34 @@
  * #Energizer       ER-HMOF600 A0        ^M
  * #Energizer       ER-OF800   A0        ^M
  */
-#define MANUFR	(buf+1)
-#define MDLNUM	(buf+17)
-#define HWVERS	(buf+28)
+#define MANUFR (buf+1)
+#define MDLNUM (buf+17)
+#define HWVERS (buf+28)
 
 /* Response to Q1 queries is in the following format:
  *
  * 01234567890123456789012345678901234567890123456
  * (118.6 118.6 118.6 020 60.0 13.8 32.0 00001000^M
  */
-#define INVOLT	(buf+1)
-#define OUTVOLT	(buf+13)
-#define LOADPCT	(buf+19)
-#define ACFREQ	(buf+23)
-#define BATVOLT	(buf+28)
-#define UPSTEMP	(buf+33)
-#define STATUS	(buf+38)
+#define INVOLT (buf+1)
+#define OUTVOLT (buf+13)
+#define LOADPCT (buf+19)
+#define ACFREQ (buf+23)
+#define BATVOLT (buf+28)
+#define UPSTEMP (buf+33)
+#define STATUS (buf+38)
 
-#define OBFLAG	(STATUS[0]=='1'||STATUS[5]=='1')
-#define LBFLAG	(STATUS[1]=='1')
-#define BYPASS	(STATUS[2]=='1')
-#define BEEPER	(STATUS[7]=='1')
+#define OBFLAG (STATUS[0]=='1'||STATUS[5]=='1')
+#define LBFLAG (STATUS[1]=='1')
+#define BYPASS (STATUS[2]=='1')
+#define BEEPER (STATUS[7]=='1')
 
 /* A calibration test of the ER-HMOF600 shows its maximum voltage at
- * 14.0V during charging, falling down to 13.6 if the UPS is turned off
- * for three minutes (but connected to line power) and to 12.8V
+ * 14.0V during charging, falling to 13.6 when the UPS is turned off
+ * for three minutes (while still connected to line power) and to 12.8V
  * immediately after starting a test with a 60W load. The 'low battery'
- * warning came at 11.0V, and a discharge time to LB with a 60W light
- * bulb took 35 minutes. The UPS ran another 5 minutes on LB before
+ * warning came on at 11.0V. The discharge time to LB with a 60W light
+ * bulb was 35 minutes. The UPS ran another 5 minutes on LB before
  * shutting down, at which time the battery voltage was 10.1V. When
  * charging resumed at the moment the LB warning came on, the battery
  * started at 12.0V.
@@ -88,12 +91,12 @@
  * the values of other similar UPSs.
  */
 
-#define LOWVOLT	(OBFLAG?11.0:12.0)
-#define VOLTRNG	1.8
-#define LOXFER	84
-#define LONORM	98
-#define HINORM	126
-#define HIXFER	142
+#define LOWVOLT (OBFLAG?11.0:12.0)
+#define VOLTRNG 1.8
+#define LOXFER 84
+#define LONORM 98
+#define HINORM 126
+#define HIXFER 142
 
 #define hidsend(x) hidcmd(x,NULL,0)
 
@@ -108,51 +111,78 @@
 
 void sendstring(int fd, char *psz)
 {
-	struct hiddev_report_info rinfo;
-	struct hiddev_usage_ref uref;
-	int i, j;
-	unsigned char c;
+    struct hiddev_report_info rinfo;
+    struct hiddev_usage_ref uref;
+    int i, j;
+    unsigned char c;
 
-	uref.usage_index = 0;
-	i = 0;
+    uref.usage_index = 0;
+    i = 0;
 
-	do
-	{
-		c = (*psz) ? *psz :0x0D;
-		for (j = 0; j < 8; j++)
-		{
-			uref.report_type = HID_REPORT_TYPE_OUTPUT;
-			uref.report_id = 0;
-			uref.field_index = 0;
-			uref.usage_code = 0x90001 + uref.usage_index;
-			uref.value = (c & 1);
-			if (ioctl(fd, HIDIOCSUSAGE, &uref) < 0)
-				fatalx("Error (SUSAGE) while talking to the UPS");
-			uref.usage_index++;
-			c >>= 1;
-		}
-		if (*psz == 0 || ++i == 8)
-		{
-			i = 0;
-			while (uref.usage_index++ < 63)
-			{
-				uref.report_type = HID_REPORT_TYPE_OUTPUT;
-				uref.report_id = 0;
-				uref.field_index = 0;
-				uref.usage_code = 0x90001 + uref.usage_index;
-				uref.value = 0;
-				if (ioctl(fd, HIDIOCSUSAGE, &uref) < 0)
-					fatalx("Error (SUSAGE) while talking to the UPS");
-			}
-			uref.usage_index = 0;
+    do
+    {
+        c = (*psz) ? *psz :0x0D;
+        for (j = 0; j < 8; j++)
+        {
+            uref.report_type = HID_REPORT_TYPE_OUTPUT;
+            uref.report_id = 0;
+            uref.field_index = 0;
+            uref.usage_code = 0x90001 + uref.usage_index;
+            uref.value = (c & 1);
+            if (ioctl(fd, HIDIOCSUSAGE, &uref) < 0)
+                fatalx("Error (SUSAGE) while talking to the UPS");
+            uref.usage_index++;
+            c >>= 1;
+        }
+        if (*psz == 0 || ++i == 8)
+        {
+            i = 0;
+            while (uref.usage_index++ < 63)
+            {
+                uref.report_type = HID_REPORT_TYPE_OUTPUT;
+                uref.report_id = 0;
+                uref.field_index = 0;
+                uref.usage_code = 0x90001 + uref.usage_index;
+                uref.value = 0;
+                if (ioctl(fd, HIDIOCSUSAGE, &uref) < 0)
+                    fatalx("Error (SUSAGE) while talking to the UPS");
+            }
+            uref.usage_index = 0;
 
-			rinfo.report_type = HID_REPORT_TYPE_OUTPUT;
-			rinfo.report_id = 0;
-			rinfo.num_fields = 1;
-			if (ioctl(fd, HIDIOCSREPORT, &rinfo) < 0)
-				fatalx("Error (SREPORT) while talking to the UPS");
-		}
-	} while (*psz++);
+            rinfo.report_type = HID_REPORT_TYPE_OUTPUT;
+            rinfo.report_id = 0;
+            rinfo.num_fields = 1;
+            if (ioctl(fd, HIDIOCSREPORT, &rinfo) < 0)
+                fatalx("Error (SREPORT) while talking to the UPS");
+        }
+    } while (*psz++);
+}
+
+/*
+ * Helper function to "fake" the first eight bytes of the UPS response. For
+ * reasons that I don't understand, on 2.6.x kernels the first eight characters
+ * never appear (i.e., the event interface starts with a set of blank
+ * characters, then we receive events that show changed bits... for the
+ * SECOND set of 8 characters. This is admittedly a disgusting hack, but then
+ * again, this serial-to-USB interface is such a hack anyway, it's a miracle it
+ * works! In any case, the point is that this way, we can make the UPS work,
+ * which is the whole point of this exercise.
+ */
+int fake_hid_ev_bits(int r, char *buf, int size)
+{
+    if (r == 31)
+    {
+        memmove(buf + 8, buf, size - 8);
+        strncpy(buf, "#Energiz", 8);
+        r += 8;
+    }
+    else if ((r == 38 || r == 39) && isdigit(buf[0]))
+    {
+        memmove(buf + 8, buf, size - 8);
+        strncpy(buf, "(117.0 1", 8);
+        r += 8;
+    }
+    return r;
 }
 
 /*
@@ -172,125 +202,126 @@ void sendstring(int fd, char *psz)
 
 int hidcmd(unsigned char *pCmd, unsigned char *pRsp, int l)
 {
-	unsigned int i;
-	int fd, rd, j, k, hid;
-	fd_set rdfs;
-	struct timeval tv;
-	struct hiddev_event ev[NUM_EVTS];
-	struct hiddev_usage_ref uref;
-	unsigned char data[8];
+    unsigned int i;
+    int fd, rd, j, k, hid;
+    fd_set rdfs;
+    struct timeval tv;
+    struct hiddev_event ev[NUM_EVTS];
+    struct hiddev_usage_ref uref;
+    unsigned char data[8];
 
-	if ((fd = open(device_path, O_RDWR)) < 0)
-		fatalx("Cannot communicate with UPS at %s", device_path);
+    if ((fd = open(device_path, O_RDWR)) < 0)
+        fatalx("Cannot communicate with UPS at %s", device_path);
 
-	FD_ZERO(&rdfs);
-	FD_SET(fd, &rdfs);
+    FD_ZERO(&rdfs);
+    FD_SET(fd, &rdfs);
 
-	memset(data, 0, sizeof(data));
-	for (i = 0; i < 64; i++)
-	{
-		uref.report_type = HID_REPORT_TYPE_INPUT;
-		uref.report_id = 0;
-		uref.field_index = 0;
-		uref.usage_index = i;
-		ioctl(fd, HIDIOCGUCODE, &uref);
-		ioctl(fd, HIDIOCGUSAGE, &uref);
+    memset(data, 0, sizeof(data));
+    for (i = 0; i < 64; i++)
+    {
+        uref.report_type = HID_REPORT_TYPE_INPUT;
+        uref.report_id = 0;
+        uref.field_index = 0;
+        uref.usage_index = i;
+        ioctl(fd, HIDIOCGUCODE, &uref);
+        ioctl(fd, HIDIOCGUSAGE, &uref);
 
-		if (uref.value) data[i >> 3] |= 1 << (i & 7);
-	}
+        if (uref.value) data[i >> 3] |= 1 << (i & 7);
+    }
 
-	sendstring(fd, pCmd);
+    sendstring(fd, pCmd);
 
-	k = 0;
+    k = 0;
 
-	if (pRsp != NULL)
-	{
-		hid = -1;
-		while (l > 0)
-		{
-			tv.tv_sec = 0;
-			tv.tv_usec = 500000;
-			if (select(fd+1, &rdfs, 0, 0, &tv) <= 0) break;
-			rd = read(fd, ev, sizeof(ev));
-			if (rd < (int) sizeof(ev[0]))
-				fatalx("Communication failure with UPS");
+    if (pRsp != NULL)
+    {
+        hid = -1;
+        while (l > 0)
+        {
+            tv.tv_sec = 0;
+            tv.tv_usec = 500000;
+            if (select(fd+1, &rdfs, 0, 0, &tv) <= 0) break;
+            rd = read(fd, ev, sizeof(ev));
+            if (rd < (int) sizeof(ev[0]))
+                fatalx("Communication failure with UPS");
 
-			for (i = 0; i < rd / sizeof(ev[0]); i++)
-			{
-				if (hid >= 0 && (int) ev[i].hid <= hid)
-				{
-					for (j = 0; j < 8; j++)
-					{
-						if (k < l - 1)
-						{
-							if (k > 0 || data[j] != 0xFF) pRsp[k++] = data[j];
-						}
-						else break;
-					}
-				}
-				j = (ev[i].hid - 1) & 0x3F;
-				if (ev[i].value) data[j >> 3] |= 1 << (j & 7);
-				else data[j >> 3] &= ~(1 << (j & 7));
-				hid = ev[i].hid;
-			}
-		}
-		if (hid >= 0) for (j = 0; j < ((hid - 1) & 0x3F) >> 3; j++)
-		{
-			if (k < l - 1)
-			{
-				if (k > 0 || data[j] != 0xFF) pRsp[k++] = data[j];
-			}
-			else break;
-		}
-		pRsp[k] = '\0';
-	}
-	close(fd);
-	return k;
+            for (i = 0; i < rd / sizeof(ev[0]); i++)
+            {
+                if (hid >= 0 && (int) ev[i].hid <= hid)
+                {
+                    for (j = 0; j < 8; j++)
+                    {
+                        if (k < l - 1)
+                        {
+                            if (k > 0 || data[j] != 0xFF) pRsp[k++] = data[j];
+                        }
+                        else break;
+                    }
+                }
+                j = (ev[i].hid - 1) & 0x3F;
+                if (ev[i].value) data[j >> 3] |= 1 << (j & 7);
+                else data[j >> 3] &= ~(1 << (j & 7));
+                hid = ev[i].hid;
+            }
+        }
+        if (hid >= 0) for (j = 0; j < ((hid - 1) & 0x3F) >> 3; j++)
+        {
+            if (k < l - 1)
+            {
+                if (k > 0 || data[j] != 0xFF) pRsp[k++] = data[j];
+            }
+            else break;
+        }
+        pRsp[k] = '\0';
+    }
+    close(fd);
+    return pRsp ? fake_hid_ev_bits(k, pRsp, l) : k;
 }
 
 
 int instcmd(const char *cmdname, const char *extra)
 {
-	if (!strcasecmp(cmdname, "test.battery.start"))
-	{
-		hidsend("TL");
-		upslogx(LOG_NOTICE, "UPS test start");
-		return STAT_INSTCMD_HANDLED;
-	}
+    if (!strcasecmp(cmdname, "test.battery.start"))
+    {
+        hidsend("TL");
+        upslogx(LOG_NOTICE, "UPS test start");
+        return STAT_INSTCMD_HANDLED;
+    }
 
-	if (!strcasecmp(cmdname, "test.battery.stop"))
-	{
-		hidsend("CT");
-		upslogx(LOG_NOTICE, "UPS test stop");
-		return STAT_INSTCMD_HANDLED;
-	}
+    if (!strcasecmp(cmdname, "test.battery.stop"))
+    {
+        hidsend("CT");
+        upslogx(LOG_NOTICE, "UPS test stop");
+        return STAT_INSTCMD_HANDLED;
+    }
 
-	if (!strcasecmp(cmdname, "beeper.on") ||
-		!strcasecmp(cmdname, "beeper.off"))
-	{
-		char buf[128];
-		int r;
+    if (!strcasecmp(cmdname, "beeper.on") ||
+        !strcasecmp(cmdname, "beeper.off"))
+    {
+        char buf[128];
+        int r;
+        int c = 0;
 
-		/* Find out beeper status and send appropriate command. */
+        /* Find out beeper status and send appropriate command. */
 
-		r = hidcmd("Q1", buf, sizeof(buf));
-		if (r < 46 || r > 47 || buf[0] != '(')
-			r = hidcmd("Q1", buf, sizeof(buf));
-		if (r >= 46 && r <= 47 && buf[0] == '(')
-		{
-			if (OBFLAG && !LBFLAG)	/* Otherwise there's not much we can do */
-			{
-				if ((BEEPER && !strcasecmp(cmdname, "beeper.off")) ||
-					(!BEEPER && !strcasecmp(cmdname, "beeper.on")))
-						hidsend("Q");
-				return STAT_INSTCMD_HANDLED;
-			}
-		}
-		return STAT_INSTCMD_HANDLED;	/* FUTURE: failure */
-	}
+        r = hidcmd("Q1", buf, sizeof(buf));
+        while (c++ < RETRIES && (r < 46 || r > 47 || buf[0] != '('))
+            r = hidcmd("Q1", buf, sizeof(buf));
+        if (r >= 46 && r <= 47 && buf[0] == '(')
+        {
+            if (OBFLAG && !LBFLAG)  /* Otherwise there's not much we can do */
+            {
+                if ((BEEPER && !strcasecmp(cmdname, "beeper.off")) ||
+                    (!BEEPER && !strcasecmp(cmdname, "beeper.on")))
+                        hidsend("Q");
+                return STAT_INSTCMD_HANDLED;
+            }
+        }
+        return STAT_INSTCMD_HANDLED;    /* FUTURE: failure */
+    }
 
-	upslogx(LOG_NOTICE, "instcmd: unknown command [%s]", cmdname);
-	return STAT_INSTCMD_UNKNOWN;
+    upslogx(LOG_NOTICE, "instcmd: unknown command [%s]", cmdname);
+    return STAT_INSTCMD_UNKNOWN;
 }
 
 /*
@@ -299,39 +330,39 @@ int instcmd(const char *cmdname, const char *extra)
 
 void upsdrv_initinfo(void)
 {
-	char buf[128];
-	int i, r;
+    char buf[128];
+    int i, r;
 
-	/* Yes, sometimes it took as many as 6-7 tries after the UPS has just
-	 * been turned on or after a communications problem.
-	 */
-	for (i = 0; i < 10; i++)
-	{
-		r = hidcmd("I", buf, sizeof(buf));
-		if (r == 39 && buf[0] == '#') break;
-		sleep(3);
-	}
-	if (r != 39 || buf[0] != '#') fatalx("No Energizer UPS detected");
-	buf[16]=buf[27]=buf[38] = '\0';
-	rtrim(MANUFR, ' ');
-	rtrim(MDLNUM, ' ');
-	rtrim(HWVERS, ' ');
+    /* Yes, sometimes it took as many as 6-7 tries after the UPS has just
+     * been turned on or after a communications problem.
+     */
+    for (i = 0; i < 10; i++)
+    {
+        r = hidcmd("I", buf, sizeof(buf));
+        if (r == 39 && buf[0] == '#') break;
+        sleep(3);
+    }
+    if (r != 39 || buf[0] != '#') fatalx("No Energizer UPS detected");
+    buf[16]=buf[27]=buf[38] = '\0';
+    rtrim(MANUFR, ' ');
+    rtrim(MDLNUM, ' ');
+    rtrim(HWVERS, ' ');
 
-	dstate_setinfo("driver.version.internal", "%s", DRV_VERSION);
-	dstate_setinfo("ups.mfr", "%s", MANUFR);
-	dstate_setinfo("ups.model", "%s", MDLNUM);
+    dstate_setinfo("driver.version.internal", "%s", DRV_VERSION);
+    dstate_setinfo("ups.mfr", "%s", MANUFR);
+    dstate_setinfo("ups.model", "%s", MDLNUM);
 
-	dstate_setinfo("input.transfer.low", "%d", LOXFER);
-	dstate_setinfo("input.transfer.high", "%d", HIXFER);
+    dstate_setinfo("input.transfer.low", "%d", LOXFER);
+    dstate_setinfo("input.transfer.high", "%d", HIXFER);
 
-	hidsend("C");
+    hidsend("C");
 
-	/* now add instant command support info */
-	dstate_addcmd("test.battery.start");
-	dstate_addcmd("test.battery.stop");
-	dstate_addcmd("beeper.on");
-	dstate_addcmd("beeper.off");
-	upsh.instcmd = instcmd;
+    /* now add instant command support info */
+    dstate_addcmd("test.battery.start");
+    dstate_addcmd("test.battery.stop");
+    dstate_addcmd("beeper.on");
+    dstate_addcmd("beeper.off");
+    upsh.instcmd = instcmd;
 }
 
 /*
@@ -340,93 +371,93 @@ void upsdrv_initinfo(void)
 
 void upsdrv_updateinfo(void)
 {
-	char buf[128];
-	int r;
-	static int f;	/* To prevent excessive logging */
-	double v;
+    char buf[128];
+    int r;
+    static int f;  /* To prevent excessive logging */
+    double v;
 
 
-	r = hidcmd("Q1", buf, sizeof(buf));
-	if (r < 46 || r > 47)
-	{
-		if (f++ < 3)
-			upslogx(LOG_ERR, "Invalid response length from UPS [%s]", buf);
-		else
-			dstate_datastale();
-		return;
-	}
-	if (buf[0] != '(')
-	{
-		if (f++ < 3)
-			upslogx(LOG_ERR, "Invalid response data from UPS [%s]", buf);
-		else
-			dstate_datastale();
-		return;
-	}
-	f = 0;
+    r = hidcmd("Q1", buf, sizeof(buf));
+    if (r < 46 || r > 47)
+    {
+        if (f++ < 3)
+            upslogx(LOG_ERR, "Invalid response length from UPS [%s]", buf);
+        else
+            dstate_datastale();
+        return;
+    }
+    if (buf[0] != '(')
+    {
+        if (f++ < 3)
+            upslogx(LOG_ERR, "Invalid response data from UPS [%s]", buf);
+        else
+            dstate_datastale();
+        return;
+    }
+    f = 0;
 
-	buf[6]=buf[12]=buf[18]=buf[22]=buf[27]=buf[32]=buf[37]=buf[46] = '\0';
+    buf[6]=buf[12]=buf[18]=buf[22]=buf[27]=buf[32]=buf[37]=buf[46] = '\0';
 
-	dstate_setinfo("input.voltage", "%s", INVOLT);
-	dstate_setinfo("output.voltage", "%s", OUTVOLT);
-	dstate_setinfo("battery.voltage", "%s", BATVOLT);
+    dstate_setinfo("input.voltage", "%s", INVOLT);
+    dstate_setinfo("output.voltage", "%s", OUTVOLT);
+    dstate_setinfo("battery.voltage", "%s", BATVOLT);
 
-	v = ((atof(BATVOLT) - LOWVOLT) / VOLTRNG) * 100.0;
-	if (v > 100.0) v = 100.0;
-	if (v < 0.0) v = 0.0;
-	dstate_setinfo("battery.charge", "%02.1f", v);
+    v = ((atof(BATVOLT) - LOWVOLT) / VOLTRNG) * 100.0;
+    if (v > 100.0) v = 100.0;
+    if (v < 0.0) v = 0.0;
+    dstate_setinfo("battery.charge", "%02.1f", v);
 
-	status_init();
-	if (OBFLAG) status_set("OB");				/* on battery */
-	else
-	{
-		status_set("OL");						/* on line */
-		/* only allow these when OL since they're bogus when OB */
-		if (BYPASS)								/* boost or trim in effect */
-		{
-			if (atoi(INVOLT) < LONORM) status_set("BOOST");
-			else if (atoi(INVOLT) > HINORM) status_set("TRIM");
-		}
-	}
-	if (LBFLAG) status_set("LB");		/* low battery */
+    status_init();
+    if (OBFLAG) status_set("OB");               /* on battery */
+    else
+    {
+        status_set("OL");                       /* on line */
+        /* only allow these when OL since they're bogus when OB */
+        if (BYPASS)                             /* boost or trim in effect */
+        {
+            if (atoi(INVOLT) < LONORM) status_set("BOOST");
+            else if (atoi(INVOLT) > HINORM) status_set("TRIM");
+        }
+    }
+    if (LBFLAG) status_set("LB");               /* low battery */
 
-	status_commit();
+    status_commit();
 
-	dstate_setinfo("ups.temperature", "%s", UPSTEMP);
-	dstate_setinfo("input.frequency", "%s", ACFREQ);
-	dstate_setinfo("ups.load", "%s", LOADPCT);
-	dstate_dataok();
+    dstate_setinfo("ups.temperature", "%s", UPSTEMP);
+    dstate_setinfo("input.frequency", "%s", ACFREQ);
+    dstate_setinfo("ups.load", "%s", LOADPCT);
+    dstate_dataok();
 }
 
 void upsdrv_shutdown(void)
 {
-	char buf[128];
-	int r;
-	int b = 1;
+    char buf[128];
+    int r;
+    int b = 1;
 
-	/* Basic idea: find out line status and send appropriate command.
-	 * If the status query fails, we do not retry more than once (we
-	 * may be short on time with a dying UPS) but assume that we're
-	 * on battery.
-	 */
+    /* Basic idea: find out line status and send appropriate command.
+     * If the status query fails, we do not retry more than once (we
+     * may be short on time with a dying UPS) but assume that we're
+     * on battery.
+     */
 
-	r = hidcmd("Q1", buf, sizeof(buf));
-	if (r < 46 || r > 47 || buf[0] != '(') r = hidcmd("Q1", buf, sizeof(buf));
+    r = hidcmd("Q1", buf, sizeof(buf));
+    if (r < 46 || r > 47 || buf[0] != '(') r = hidcmd("Q1", buf, sizeof(buf));
 
-	if (r >= 46 && r <= 47 && buf[0] == '(')
-	{
-		if (OBFLAG)
-			upslogx(LOG_WARNING, "On battery, sending shutdown command...");
-		else
-		{
-			b = 0;
-			upslogx(LOG_WARNING, "On line, sending shutdown+return command...");
-		}
-	}
-	else upslogx(LOG_WARNING, "Status undetermined, assuming battery power, "
-				"sending shutdown command...");
+    if (r >= 46 && r <= 47 && buf[0] == '(')
+    {
+        if (OBFLAG)
+            upslogx(LOG_WARNING, "On battery, sending shutdown command...");
+        else
+        {
+            b = 0;
+            upslogx(LOG_WARNING, "On line, sending shutdown+return command...");
+        }
+    }
+    else upslogx(LOG_WARNING, "Status undetermined, assuming battery power, "
+                "sending shutdown command...");
 
-	hidsend(b ? "S01" : "S01R0003");
+    hidsend(b ? "S01" : "S01R0003");
 }
 
 
@@ -441,17 +472,17 @@ void upsdrv_makevartable(void)
 
 void upsdrv_banner(void)
 {
-	printf("Network UPS Tools - Energizer USB UPS driver %s (%s)\n\n", 
-		DRV_VERSION, UPS_VERSION);
-	experimental_driver = 1;	/* Causes a warning to be printed */
+    printf("Network UPS Tools - Energizer USB UPS driver %s (%s)\n\n", 
+        DRV_VERSION, UPS_VERSION);
+    experimental_driver = 1;    /* Causes a warning to be printed */
 }
 
 void upsdrv_initups(void)
 {
-	/* No initialization needed */
+    /* No initialization needed */
 }
 
 void upsdrv_cleanup(void)
 {
-	/* No cleanup needed */
+    /* No cleanup needed */
 }
